cmake_minimum_required(VERSION 2.6)
project(MolecularDynamics LANGUAGES CXX)
set(CMAKE_MAKE_PROGRAM "Makefile")

message("------------ Molecular Dynamics --------------")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_subdirectory(src)
message("------------   End Configure    --------------")